force-app/main/default/objects/Contact/fields/Wise_Last_Lead_Created__c.field-meta.xml
<CustomField>
    <fullName>Wise_Last_Lead_Created__c</fullName>
    <label>Wise Last Lead Created</label>
    <type>Date</type>
</CustomField>