force-app/main/default/objects/Contact/fields/Wise_Last_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Wise_Last_Meeting__c</fullName>
    <label>Wise Last Meeting</label>
    <type>Date</type>
</CustomField>