force-app/main/default/objects/Contact/fields/Wise_Mortgage_Risk__c.field-meta.xml
<CustomField>
    <fullName>Wise_Mortgage_Risk__c</fullName>
    <label>Wise Mortgage Risk</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>