force-app/main/default/objects/Contact/fields/Wise_Only_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Wise_Only_Secondary__c</fullName>
    <formula>AND(
 Wise_Active_Policies_Count__c &gt; 0,
Wise_Count_As_Secondary__c =  Wise_Active_Policies_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wise Only Secondary</label>
    <type>Checkbox</type>
</CustomField>