force-app/main/default/objects/Contact/fields/Wise_Pension_Active__c.field-meta.xml
<CustomField>
    <fullName>Wise_Pension_Active__c</fullName>
    <label>Wise Pension Active</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>