force-app/main/default/objects/Contact/fields/Wise_Savings_Plan_Active__c.field-meta.xml
<CustomField>
    <fullName>Wise_Savings_Plan_Active__c</fullName>
    <label>Wise Savings Plan Active</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>