force-app/main/default/objects/Contact/fields/Wise_Serious_Illness_Active__c.field-meta.xml
<CustomField>
    <fullName>Wise_Serious_Illness_Active__c</fullName>
    <label>Wise Serious Illness Active</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>