force-app/main/default/objects/Contact/fields/XXX_Adress__c.field-meta.xml
<CustomField>
    <fullName>XXX_Adress__c</fullName>
    <description>שדה אליו יופנו פרטי כתובת של פרודוקציה. לא לשימוש ולא לתצוגה</description>
    <label>XXX_Adress</label>
    <length>200</length>
    <type>Text</type>
</CustomField>