force-app/main/default/objects/Contact/recordTypes/AgentWise_IL__Business_Contact.recordType-meta.xml
<RecordType>
    <fullName>AgentWise_IL__Business_Contact</fullName>
    <active>false</active>
    <description>איש קשר עסקי שהסוכנות עובדת איתו</description>
    <label>Business Contact</label>
</RecordType>