force-app/main/default/objects/Contact/recordTypes/AgentWise_IL__Client.recordType-meta.xml
<RecordType>
    <fullName>AgentWise_IL__Client</fullName>
    <active>true</active>
    <description>לקוח של הסוכנות.</description>
    <label>Client</label>
</RecordType>