force-app/main/default/objects/Contact/recordTypes/AgentWise_IL__Dependent.recordType-meta.xml
<RecordType>
    <fullName>AgentWise_IL__Dependent</fullName>
    <active>false</active>
    <description>בן/בת משפחה של לקוח.  יכולים להיות לקוחות בפני עצמם.</description>
    <label>Dependent</label>
</RecordType>