force-app/main/default/objects/Contact/recordTypes/AgentWise_IL__Producer.recordType-meta.xml
<RecordType>
    <fullName>AgentWise_IL__Producer</fullName>
    <active>false</active>
    <description>סוכן ביטוח בסוכנות.</description>
    <label>Producer</label>
</RecordType>