force-app/main/default/objects/Contact/recordTypes/AgentWise_IL__Supervisor.recordType-meta.xml
<RecordType>
    <fullName>AgentWise_IL__Supervisor</fullName>
    <active>false</active>
    <description>מפקח מטעם חברת הביטוח.</description>
    <label>Deprecated</label>
</RecordType>