force-app/main/default/objects/Contact/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>false</active>
    <description>לקוח \ מבוטח</description>
    <label>Customer</label>
</RecordType>