force-app/main/default/objects/Contact/recordTypes/Novidea_HPC__Contact_Person.recordType-meta.xml
<RecordType>
    <fullName>Novidea_HPC__Contact_Person</fullName>
    <active>true</active>
    <description>Business Contact Person</description>
    <label>Contact Person</label>
</RecordType>