force-app/main/default/objects/Contact/recordTypes/Novidea_HPC__Employee.recordType-meta.xml
<RecordType>
    <fullName>Novidea_HPC__Employee</fullName>
    <active>false</active>
    <description>Employee Contact Person</description>
    <label>Employee</label>
</RecordType>