force-app/main/default/objects/Contact/recordTypes/Shefi_Employee.recordType-meta.xml
<RecordType>
    <fullName>Shefi_Employee</fullName>
    <active>true</active>
    <label>Shefi Employee</label>
</RecordType>