force-app/main/default/objects/Contact/recordTypes/Third_Party.recordType-meta.xml
<RecordType>
    <fullName>Third_Party</fullName>
    <active>true</active>
    <description>Associated person who is related to claims</description>
    <label>Third Party</label>
</RecordType>