force-app/main/default/objects/Contact/validationRules/AgentWise_IL__Israeli_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>AgentWise_IL__Israeli_Id</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISBLANK(AgentWise_IL__SSN__c)),LEN(AgentWise_IL__SSN__c)&gt;9 || 
(LEN(AgentWise_IL__SSN__c)&gt;0 &amp;&amp; !ISNUMBER(AgentWise_IL__SSN__c)) || 
MOD( 
VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 9, 1))+ 
IF( VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 8, 1))&lt;5, 
VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 8, 1))*2, 
VALUE(MID(TEXT(VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 8, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 8, 1))*2),2,1)) 
) + 
VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 7, 1))+ 
IF( VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 6, 1))&lt;5, 
VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 6, 1))*2, 
VALUE(MID(TEXT(VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 6, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 6, 1))*2),2,1)) 
) + 
VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 5, 1))+ 
IF( VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 4, 1))&lt;5, 
VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 4, 1))*2, 
VALUE(MID(TEXT(VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 4, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 4, 1))*2),2,1)) 
) + 
VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 3, 1))+ 
IF( VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 2, 1))&lt;5, 
VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 2, 1))*2, 
VALUE(MID(TEXT(VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 2, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 2, 1))*2),2,1)) 
) + 
VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 1, 1))
, 10) != 0)</errorConditionFormula>
    <errorDisplayField>AgentWise_IL__SSN__c</errorDisplayField>
    <errorMessage>Id not valid</errorMessage>
</ValidationRule>