force-app/main/default/objects/Contact/validationRules/Aw_SSN_Validity_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Aw_SSN_Validity_Check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT($Setup.NOVU__Trigger__c.NOVU__Stop_Validation_Rule__c ),
Not($Profile.Id = &quot;00eD0000001mpv0&quot;),
NOT(CONTAINS( LastName,&quot;נסיון&quot;)),
ISPICKVAL(Id_Type__c, &apos;תעודת זהות&apos;),
NOT(ISBLANK( AgentWise_IL__SSN__c )),LEN(AgentWise_IL__SSN__c)&lt;&gt;9 ||
(LEN(AgentWise_IL__SSN__c)&gt;0 &amp;&amp; !ISNUMBER(AgentWise_IL__SSN__c)) ||
MOD(
VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 9, 1))+
IF( VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 8, 1))&lt;5,
VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 8, 1))*2,
VALUE(MID(TEXT(VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 8, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 8, 1))*2),2,1))
) +
VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 7, 1))+
IF( VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 6, 1))&lt;5,
VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 6, 1))*2,
VALUE(MID(TEXT(VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 6, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 6, 1))*2),2,1))
) +
VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 5, 1))+
IF( VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 4, 1))&lt;5,
VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 4, 1))*2,
VALUE(MID(TEXT(VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 4, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 4, 1))*2),2,1))
) +
VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 3, 1))+
IF( VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 2, 1))&lt;5,
VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 2, 1))*2,
VALUE(MID(TEXT(VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 2, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 2, 1))*2),2,1))
) +
VALUE(MID(LPAD(AgentWise_IL__SSN__c,9,&quot;0&quot;), 1, 1))
, 10) != 0)</errorConditionFormula>
    <errorMessage>מס הזהות שהוקש שגוי. יש לוודא שהמספר תקין והינו בן 9 ספרות</errorMessage>
</ValidationRule>