force-app/main/default/objects/Contact/validationRules/Check_SSN_validity.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_SSN_validity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( $Setup.Novidea_HPC__Trigger__c.Novidea_HPC__Stop_Validation_Rule__c ),
Not($Profile.Id = &quot;00eD0000001mpv0&quot;),
NOT(AND(
ISNEW(),
Flow_Creation__c = TRUE)),
OR(RecordType.DeveloperName = &apos;Client&apos;, NOT(ISBLANK(Novidea_HPC__SSN__c ))),
NOT(CONTAINS( LastName,&quot;נסיון&quot;)),
ISPICKVAL(Id_Type__c, &apos;תעודת זהות&apos;),
( 
LEN(Novidea_HPC__SSN__c)&lt;9 || 
LEN(Novidea_HPC__SSN__c)&gt;9 ||
(LEN(Novidea_HPC__SSN__c)&gt;0 &amp;&amp; !ISNUMBER(Novidea_HPC__SSN__c)) || 
MOD( 
VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 9, 1))+ 
IF( VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 8, 1))&lt;5, 
VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 8, 1))*2, 
VALUE(MID(TEXT(VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 8, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 8, 1))*2),2,1)) 
) + 
VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 7, 1))+ 
IF( VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 6, 1))&lt;5, 
VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 6, 1))*2, 
VALUE(MID(TEXT(VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 6, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 6, 1))*2),2,1)) 
) + 
VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 5, 1))+ 
IF( VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 4, 1))&lt;5, 
VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 4, 1))*2, 
VALUE(MID(TEXT(VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 4, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 4, 1))*2),2,1)) 
) + 
VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 3, 1))+ 
IF( VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 2, 1))&lt;5, 
VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 2, 1))*2, 
VALUE(MID(TEXT(VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 2, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 2, 1))*2),2,1)) 
) + 
VALUE(MID(LPAD(Novidea_HPC__SSN__c,9,&quot;0&quot;), 1, 1)) 
, 10) != 0) 
)</errorConditionFormula>
    <errorDisplayField>Novidea_HPC__SSN__c</errorDisplayField>
    <errorMessage>מס הזהות שהוקש שגוי. יש לוודא שהמספר תקין והינו בן 9 ספרות</errorMessage>
</ValidationRule>