force-app/main/default/objects/Contact/validationRules/ElemClientCheckEmail.validationRule-meta.xml
<ValidationRule>
    <fullName>ElemClientCheckEmail</fullName>
    <active>true</active>
    <description>ולידציה לאלמנטרי</description>
    <errorConditionFormula>AND($Setup.Novidea_HPC__Trigger__c.Novidea_HPC__Stop_Validation_Rule__c =False, 
NOT(ISCHANGED( Anti_Validate__c)),
Created_By_Product_Flow__c = FALSE,
NOT( AND(ISNEW(),isDataFromUserRecord__c) ), 
CASESAFEID( $User.ProfileId ) != &apos;00e4G000001oUufQAE&apos;,
CASESAFEID( $User.ProfileId ) !=&apos;00e4G000001oV9VQAU&apos;,
Not($Profile.Id = &quot;00eD0000001mpv0&quot;),
NOT(ISCHANGED( Otzar_Interface__Last_Modified_By_Load_Date__c)),
NOT(AND(
ISNEW(),
Flow_Creation__c = TRUE)),
NoEmail__c =false, 
ISBLANK( Email ))</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>יש להזין כתובת דוא&quot;ל ללקוח</errorMessage>
</ValidationRule>