force-app/main/default/objects/Contact/validationRules/Novidea_HPC__Check_First_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Novidea_HPC__Check_First_Name</fullName>
    <active>false</active>
    <errorConditionFormula>AND($Setup.Novidea_HPC__Trigger__c.Novidea_HPC__Stop_Validation_Rule__c =False, 
OR(NOT(REGEX( FirstName, &quot;[0-9A-Za-zא-ת \\-]*&quot;)),
LEN(FirstName) = 1))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name is not valid</errorMessage>
</ValidationRule>