force-app/main/default/objects/Contact/validationRules/Novidea_HPC__Check_Mobile_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Novidea_HPC__Check_Mobile_Number</fullName>
    <active>false</active>
    <errorConditionFormula>AND($Setup.Novidea_HPC__Trigger__c.Novidea_HPC__Stop_Validation_Rule__c =False, 
NOT(REGEX( MobilePhone, &quot;0[0-9 \\-]{1,3}[0-9]{7}&quot;)), 
NOT(ISBLANK( MobilePhone)))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Mobile Number is not valid</errorMessage>
</ValidationRule>