force-app/main/default/objects/Contact/validationRules/Novidea_HPC__Check_Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Novidea_HPC__Check_Phone_Number</fullName>
    <active>false</active>
    <errorConditionFormula>AND($Setup.Novidea_HPC__Trigger__c.Novidea_HPC__Stop_Validation_Rule__c =False, 
NOT(REGEX(Phone, &quot;0[0-9 \\-]{1,3}[0-9]{7}&quot;)),
NOT(ISBLANK(Phone)))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone Number is not valid</errorMessage>
</ValidationRule>