force-app/main/default/objects/Contact/listViews/AgentWise_IL__supervisors.listView-meta.xml
<ListView>
    <fullName>AgentWise_IL__supervisors</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.AgentWise_IL__Supervisor</value>
    </filters>
    <label>מפקחים</label>
    <language>en_US</language>
</ListView>