force-app/main/default/objects/Contact/listViews/AgentWise_IL__View.listView-meta.xml
<ListView>
    <fullName>AgentWise_IL__View</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.AgentWise_IL__Producer</value>
    </filters>
    <label>סוכני ביטוח</label>
    <language>iw</language>
</ListView>