force-app/main/default/objects/Contact/listViews/NBU__MyContacts.listView-meta.xml
<ListView>
    <fullName>NBU__MyContacts</fullName>
    <filterScope>Mine</filterScope>
    <label>My Contacts</label>
</ListView>